<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/title_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_1_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_1_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_2_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_2_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_3_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_3_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_4_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_4_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_5_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_5_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_6_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_6_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_7_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_7_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_8_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_8_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_9_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_9_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_10_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_10_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:text="@string/middle_title_11_terms_of_service"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/message_11_terms_of_service"/>

            <View
                android:layout_width="0dp"
                android:layout_height="16dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>