<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:weightSum="1"
    android:orientation="vertical">

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.15"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/pin_title_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/pin_message_text"/>

    <com.poovam.pinedittextfield.SquarePinField
        android:id="@+id/square_pin_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:textSize="24sp"
        app:cornerRadius="6dp"
        app:noOfFields="6"
        app:lineThickness="0dp"
        app:highlightType="noFields"
        app:fieldBgColor="@color/user_key_edit_color"
        android:inputType="numberPassword"/>

    <TextView
        android:id="@+id/warning_text"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/warning_text_color"
        android:textSize="12sp"
        android:text="@string/pin_warning_message"
        android:drawablePadding="4dp"
        app:drawableStartCompat="@drawable/ic_warning_pin" />


</LinearLayout>